@@ -177,6 +177,10 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Wolof (wo)
 * Mingrelian (xmf)
 * Yiddish (yi)
+* Cantonese (yue)
+* Old Chinese / Late Time Chinese (zh-classical)
+* Chinese (Simplified) (zh-hans)
+* Chinese (Traditional) (zh-hant)
 
 == Compatibility ==
 
